--- a/index.html
+++ b/index.html
@@ -1,36 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Welcome to Course View!</title>
-  <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Course View - Blogs</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-
   <header>
     <h1>Welcome to Course View!</h1>
     <nav>
-      <a href="/blog/">Blogs</a>
-      <a href="/support/">Support Me</a>
+      <a href="index.html">Blogs</a>
+      <a href="support.html">Support Us</a>
     </nav>
   </header>
-
   <main>
-    <section id="blogs">
-      <h2>Blogs</h2>
-      <div class="blog-grid">
-        <a href="blog/blog1.html" class="blog-card">
-          <img src="assets/images/blog1-thumb.jpg" alt="Blog 1">
-          <h3>Arrays in Python</h3>
-        </a>
-        <a href="blog/blog2.html" class="blog-card">
-          <img src="assets/images/blog2-thumb.jpg" alt="Blog 2">
-          <h3>Binary Search Trees</h3>
-        </a>
-        <!-- Add more blog cards here -->
-      </div>
+    <section id="blog-list">
+      <!-- Blog entries will be loaded here -->
     </section>
   </main>
-
+  <script src="scripts.js"></script>
 </body>
 </html>
