--- a/blogs/e1-agile-for-practitioners.html
+++ b/blogs/e1-agile-for-practitioners.html
@@ -22,80 +22,80 @@
     <div class="question">
       <p><strong>2. When you have more than one agile team working on a single product, which are crucial considerations?</strong></p>
       <div class="options">
-        <p>e. All teams need to have similar agile maturity</p>
-        <p class="correct">f. PO/Product specialist to devote similar time to all teams</p>
-        <p class="correct">g. Teams to have occasional synch-up meets to eliminate dependencies</p>
-        <p class="correct">h. All teams to have an identified coordinator and they stay in continuous touch to eliminate differences</p>
+        <p>a. All teams need to have similar agile maturity</p>
+        <p class="correct">b. PO/Product specialist to devote similar time to all teams</p>
+        <p class="correct">c. Teams to have occasional synch-up meets to eliminate dependencies</p>
+        <p class="correct">d. All teams to have an identified coordinator and they stay in continuous touch to eliminate differences</p>
       </div>
     </div>
 
     <div class="question">
       <p><strong>3. Suggested way to share & sustain knowledge with members in a team?</strong></p>
       <div class="options">
-        <p>i. Sharing of best practices and lesson learnt through emails</p>
-        <p>j. Sharing knowledge through knowledge sharing sessions</p>
-        <p>k. Sharing knowledge through informal conversations eg lunch breaks</p>
-        <p class="correct">l. Updating best practices, lesson learnt and other topics in a central place accessible to all</p>
+        <p>a. Sharing of best practices and lesson learnt through emails</p>
+        <p>b. Sharing knowledge through knowledge sharing sessions</p>
+        <p>c. Sharing knowledge through informal conversations eg lunch breaks</p>
+        <p class="correct">d. Updating best practices, lesson learnt and other topics in a central place accessible to all</p>
       </div>
     </div>
 
     <div class="question">
       <p><strong>4. Standard way for anyone outside an agile team (e.g., delivery partner) to get the work status anytime?</strong></p>
       <div class="options">
-        <p class="correct">m. He/she can refer physical/digital Kanban board maintained by the team</p>
-        <p>n. All team members need to send email updates to him/her daily</p>
-        <p>o. Have status review meeting whenever required</p>
-        <p>p. By talking to each team member daily to understand the status</p>
+        <p class="correct">a. He/she can refer physical/digital Kanban board maintained by the team</p>
+        <p>b. All team members need to send email updates to him/her daily</p>
+        <p>c. Have status review meeting whenever required</p>
+        <p>d. By talking to each team member daily to understand the status</p>
       </div>
     </div>
 
     <div class="question">
       <p><strong>5. What do you think is a good way for team members to remain updated on work status at any given time?</strong></p>
       <div class="options">
-        <p class="correct">q. Having an updated physical/digital Kanban board</p>
-        <p>r. Sharing status through email with all</p>
-        <p>s. Sharing individual updates with the lead and the lead sharing a consolidated summary with all</p>
-        <p>t. Sharing and referring status reports that are shared daily</p>
+        <p class="correct">a. Having an updated physical/digital Kanban board</p>
+        <p>b. Sharing status through email with all</p>
+        <p>c. Sharing individual updates with the lead and the lead sharing a consolidated summary with all</p>
+        <p>d. Sharing and referring status reports that are shared daily</p>
       </div>
     </div>
 
     <div class="question">
       <p><strong>6. Recommended way to run retrospective?</strong></p>
       <div class="options">
-        <p>u. Team discusses the feedback received during iteration demo, creates a roadmap in retrospective</p>
-        <p class="correct">v. Team discussed how they can improve their way of working, picks up one or two improvement areas for next iteration</p>
-        <p>w. Team takes a stock of current velocity and forecasts the velocity for the next iteration</p>
-        <p>x. Team is encouraged to identify and take up process improvement initiatives</p>
+        <p>a. Team discusses the feedback received during iteration demo, creates a roadmap in retrospective</p>
+        <p class="correct">b. Team discussed how they can improve their way of working, picks up one or two improvement areas for next iteration</p>
+        <p>c. Team takes a stock of current velocity and forecasts the velocity for the next iteration</p>
+        <p>d. Team is encouraged to identify and take up process improvement initiatives</p>
       </div>
     </div>
 
     <div class="question">
       <p><strong>7. Effective way to ensure that the integrated code is working as per the acceptance criteria?</strong></p>
       <div class="options">
-        <p>y. Through automated functional tests</p>
-        <p>z. Through manual functional tests</p>
-        <p class="correct">aa. Through automated unit tests</p>
-        <p>bb. Through manual unit tests</p>
+        <p>a. Through automated functional tests</p>
+        <p>b. Through manual functional tests</p>
+        <p class="correct">c. Through automated unit tests</p>
+        <p>d. Through manual unit tests</p>
       </div>
     </div>
 
     <div class="question">
       <p><strong>8. In a team if someone gets stuck in the technical tasks during the iteration, what is the immediate next step?</strong></p>
       <div class="options">
-        <p>cc. W/o wasting time, the team member has to inform the lead/onsite coordinator and take up another task</p>
-        <p class="correct">dd. Team members can reach out to other team members for help</p>
-        <p>ee. Team member can raise the issue during team retrospective</p>
-        <p>ff. Team member must search in Google, technical forums w/o wasting time</p>
+        <p>a. W/o wasting time, the team member has to inform the lead/onsite coordinator and take up another task</p>
+        <p class="correct">b. Team members can reach out to other team members for help</p>
+        <p>c. Team member can raise the issue during team retrospective</p>
+        <p>d. Team member must search in Google, technical forums w/o wasting time</p>
       </div>
     </div>
 
     <div class="question">
       <p><strong>9. In an agile team, how would a team member know what others are working on?</strong></p>
       <div class="options">
-        <p>gg. PO & SM are responsible for maintaining work transparency</p>
-        <p class="correct">hh. Team should have a daily synch up</p>
-        <p>ii. Onsite coordinator should share daily status for each member</p>
-        <p>jj. They may know from the backlog maintained in a tool (Jira, Prime etc.) which will show the items assigned to each member</p>
+        <p>a. PO & SM are responsible for maintaining work transparency</p>
+        <p class="correct">b. Team should have a daily synch up</p>
+        <p>c. Onsite coordinator should share daily status for each member</p>
+        <p>d. They may know from the backlog maintained in a tool (Jira, Prime etc.) which will show the items assigned to each member</p>
       </div>
     </div>
 
@@ -104,105 +104,105 @@
       <div class="options">
         <p>a. Through peer review</p>
         <p>b. Through functional testing done by testers</p>
-        <p class="correct">kk. Through formal unit testing using tools/s/w/plugins</p>
+        <p class="correct">c. Through formal unit testing using tools/s/w/plugins</p>
       </div>
     </div>
 
       <div class="question">
       <p><strong>11. If you are working in a customer-facing agile team, who is more mature/ready for agile?</strong></p>
       <div class="options">
-        <p>c. Our TCS team</p>
-        <p>d. Customer team</p>
-        <p>e. Both are equal</p>
-        <p class="correct">ll. Not sure</p>
+        <p>a. Our TCS team</p>
+        <p>b. Customer team</p>
+        <p>c. Both are equal</p>
+        <p class="correct">d. Not sure</p>
       </div>
     </div>
 
     <div class="question">
       <p><strong>12. For any meeting that development team members, working in agile, have among them, what are the points to consider?</strong></p>
       <div class="options">
-        <p class="correct">mm. Dev team must keep such meetings to minimal or zero occurrences</p>
-        <p>nn. Dev team must not allow such meetings to go beyond an hour</p>
-        <p>f. Dev team must restrict such meetings to max 30mins, with few exceptions</p>
-        <p class="correct">oo. Dev team to decide on numbers & duration of such meetings based on situations</p>
+        <p class="correct">a. Dev team must keep such meetings to minimal or zero occurrences</p>
+        <p>b. Dev team must not allow such meetings to go beyond an hour</p>
+        <p>c. Dev team must restrict such meetings to max 30mins, with few exceptions</p>
+        <p class="correct">d. Dev team to decide on numbers & duration of such meetings based on situations</p>
       </div>
     </div>
 
     <div class="question">
       <p><strong>13. How should a team have quality standards built into its deliverables?</strong></p>
       <div class="options">
-        <p>g. By procuring the best test automation suite applicable for the team</p>
-        <p class="correct">h. By having an agreed & evolving set of DoD items, which are automated wherever possible</p>
-        <p>i. By having robust definition of ready mechanism so that stories are granular enough</p>
-        <p>j. Team must have a strong set of quality assurance professionals to create built-in quality</p>
+        <p>a. By procuring the best test automation suite applicable for the team</p>
+        <p class="correct">b. By having an agreed & evolving set of DoD items, which are automated wherever possible</p>
+        <p>c. By having robust definition of ready mechanism so that stories are granular enough</p>
+        <p>d. Team must have a strong set of quality assurance professionals to create built-in quality</p>
       </div>
     </div>
 
     <div class="question">
       <p><strong>14. Agile WoW in meetings run?</strong></p>
       <div class="options">
-        <p>k. Meetings must be scheduled with a lead time so that the participants can plan their work better</p>
-        <p>l. Meetings must have a set agenda to facilitate a focused discussion and reduce digressions</p>
-        <p class="correct">m. Meetings must be facilitated and time-boxed</p>
-        <p>n. Team lead/SM must facilitate discussions but he/she may close meetings as per preference</p>
+        <p>a. Meetings must be scheduled with a lead time so that the participants can plan their work better</p>
+        <p>b. Meetings must have a set agenda to facilitate a focused discussion and reduce digressions</p>
+        <p class="correct">c. Meetings must be facilitated and time-boxed</p>
+        <p>d. Team lead/SM must facilitate discussions but he/she may close meetings as per preference</p>
       </div>
     </div>
 
     <div class="question">
       <p><strong>15. For an agile team, easy way to track the task?</strong></p>
       <div class="options">
-        <p>o. SM knows the status as he/she only assigns tasks to members, he/she can use any tool to manage the same</p>
-        <p>p. Onsite members are in a better position to track tasks at their end as they coordinate between PO and rest of the team</p>
-        <p class="correct">q. All the tasks can be maintained in a common place (Jira, physical board etc.) with an indication: doing, done, to be done</p>
-        <p>r. Customer/PO should manage & track the tasks through any available tool</p>
+        <p>a. SM knows the status as he/she only assigns tasks to members, he/she can use any tool to manage the same</p>
+        <p>b. Onsite members are in a better position to track tasks at their end as they coordinate between PO and rest of the team</p>
+        <p class="correct">c. All the tasks can be maintained in a common place (Jira, physical board etc.) with an indication: doing, done, to be done</p>
+        <p>d. Customer/PO should manage & track the tasks through any available tool</p>
       </div>
     </div>
 
     <div class="question">
       <p><strong>16. Given a piece of work to be executed in agile, how would you form a team?</strong></p>
       <div class="options">
-        <p>s. Team must have all the skills required. Team size will depend on scope & budget</p>
-        <p class="correct">t. Team must have all required skills, hc being less than 12</p>
-        <p>u. Team must have all experienced people, hc not exceeding 9</p>
-        <p>v. Team must have mix of experience & freshers with right skills. Team size depends on scope & budget</p>
+        <p>a. Team must have all the skills required. Team size will depend on scope & budget</p>
+        <p class="correct">b. Team must have all required skills, hc being less than 12</p>
+        <p>c. Team must have all experienced people, hc not exceeding 9</p>
+        <p>d. Team must have mix of experience & freshers with right skills. Team size depends on scope & budget</p>
       </div>
     </div>
 
     <div class="question">
       <p><strong>17. In a team, if all members do regular check-in of the code, then how should one ensure that the code is not broken anywhere?</strong></p>
       <div class="options">
-        <p class="correct">w. Through SCM triggered build</p>
-        <p>x. Through scheduled build</p>
-        <p>y. By triggering automated build after check-in</p>
-        <p>z. Through SCM based code branching</p>
+        <p class="correct">a. Through SCM triggered build</p>
+        <p>b. Through scheduled build</p>
+        <p>c. By triggering automated build after check-in</p>
+        <p>d. Through SCM based code branching</p>
       </div>
     </div>
 
     <div class="question">
       <p><strong>18. How does an Agile team manage requirements in a productive manner?</strong></p>
       <div class="options">
-        <p>aa. Business analyst should manage the business requirement & technical team should manage the technical requirements</p>
-        <p>bb. Every team member should maintain a personal backlog of items they are working on</p>
-        <p>cc. SM/Onsite coordinator to manage the requirements & communicate the tasks to the team members</p>
-        <p class="correct">dd. All the requirements should be maintained in a common place such as Jira/Whiteboard</p>
+        <p>a. Business analyst should manage the business requirement & technical team should manage the technical requirements</p>
+        <p>b. Every team member should maintain a personal backlog of items they are working on</p>
+        <p>c. SM/Onsite coordinator to manage the requirements & communicate the tasks to the team members</p>
+        <p class="correct">d. All the requirements should be maintained in a common place such as Jira/Whiteboard</p>
       </div>
     </div>
 
     <div class="question">
       <p><strong>19. When multiple teams are working on a related feature, how often should they integrate their work?</strong></p>
       <div class="options">
-        <p>ee. Depends on whether the integration will break the build</p>
-        <p>ff. After they reach a logical end of the coding the functionality</p>
-        <p class="correct">gg. In a scheduled daily frequency</p>
-        <p>hh. In a scheduled weekly frequency</p>
+        <p>a. Depends on whether the integration will break the build</p>
+        <p>b. After they reach a logical end of the coding the functionality</p>
+        <p class="correct">c. In a scheduled daily frequency</p>
+        <p>d. In a scheduled weekly frequency</p>
       </div>
     </div>
 
     <div class="question">
       <p><strong>20. Have you gone through the Living Agile session?</strong></p>
       <div class="options">
-        <p>ii. Yes</p>
-        <p class="correct">jj. No</p>
+        <p>a. Yes</p>
+        <p class="correct">b. No</p>
       </div>
     </div>
 
